2008-07-08 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/50sp.rb, 60sf.rb: fix #111. thx KAKUTANI Shintaro.

2008-07-08 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary.rb, plugin/00default.rb: use device-width accessed by iPhone/iPod touch.

2008-07-05 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary.rb, index.rb: raise 404 error when bot access to no existent diary.
	* tdiary.rb, plugin/00default.rb: support iPhone/iPod touch.

2008-07-05 KURODA Hiraku <hiraku at sapporo.email.ne.jp>
	* fixed error when volatile.tdr is not exist.

2008-07-02 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* merge from Test_SelectFilter.

2008-07-01 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* misc/filter/plugin/antispamservice.rb: fix key verify condition.
	* misc/filter/antispam.rb, misc/filter/plugin/antispam.rb,
	misc/filter/plugin/*/antispam.rb: rename antispam to antispamservice.

2008-06-25 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/00default.rb: escape double quotation in title attribute of
	subtitle anchor.

2008-06-24 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/00default.rb: added title attribute in subtitle anchor.

2008-06-23 TADA Tadashi <sho@spc.gr.jp>
	* skel/footer.rhtml: using rescue on display to RUBY_PATCHLEVEL.

2008-06-23 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary.rb: add 'Semulator', 'Vemulator', 'J-EMULATOR' and 'emobile' to 
	mobile user agent.
	* skel/footer.rhtml: display RUBY_PATCHLEVEL in footer.

2008-06-15 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* misc/filter/antispam.rb, misc/filter/plugin/antispam.rb,
	misc/filter/plugin/*/antispam.rb: delete antispam.enable option.

2008-06-15 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/10spamfilter.rb, plugin/*/10spamfilter.rb,
	tdiary.rb: integrate logger and spamfilter debug log.

2008-06-15 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary.rb: changed logger path option. 

2008-06-09 TADA Tadashi <sho@spc.gr.jp>